--- a/cssformedium_calc.css
+++ b/cssformedium_calc.css
@@ -8,6 +8,14 @@
 	height: 100vh;
 	background-color: #55efc4;
 }
+#My_Name {
+	display: flex;
+	justify-content: center;
+	padding-top: 5%;
+	color: #fff;
+	font-weight: bold;
+	font-size: 30px;
+}
 .Wrapper {
 	position: absolute;
 	top: 50%;
